# Copier_Python_Default

./: .coverage  .gitignore  .pre-commit-config.yaml  .safety-project.ini  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  cookiecutter.json  copier.yaml  justfile  prepare-commit-msg.py  pyproject.toml  reproduce_issue.py  {{ 'docker-compose.yml' if docker_support else '' }}
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yaml  main.yaml  release.yaml  tests.yaml
scripts/: install_rich_hook.py
template/{{ project_name }}/: CONTRIBUTING.md.jinja  README.md.jinja  docker-compose.yml.jinja  prepare-commit-msg.py  pyproject.toml.jinja
template/{{ project_name }}/docs/: index.md.jinja
template/{{ project_name }}/tests/: test_settings.py.jinja
template/{{ project_slug }}/: .env.jinja  .gitignore  .pre-commit-config.yaml.jinja  CITATION.cff.jinja  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md.jinja  Dockerfile.jinja  LICENSE.md.jinja  README.md.jinja  ROADMAP.md.jinja  bootstrap.py.jinja  docker-compose.yml.jinja  justfile.jinja  mkdocs.yml.jinja  prepare-commit-msg.py  pyproject.toml.jinja  readthedocs.yaml.jinja
template/{{ project_slug }}/.github/: dependabot.yml.jinja
template/{{ project_slug }}/.github/workflows/: deploy.yaml.jinja  docs.yaml.jinja  main.yaml.jinja  release.yaml.jinja
template/{{ project_slug }}/docs/: api.md.jinja  index.md.jinja
template/{{ project_slug }}/scripts/: new_adr.py
template/{{ project_slug }}/src/{{ module_name }}/: __init__.py.jinja  config.py.jinja  settings.py  settings.py.jinja
template/{{ project_slug }}/src/{{ module_name }}/cli/: __main__.py.jinja
template/{{ project_slug }}/tests/: conftest.py  test_init.py.jinja  test_project.py  test_project_structure.py.jinja  test_settings.py.jinja
test-output/my_new_project/: .gitignore  .pre-commit.config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
test-output/my_new_project/docs/: index.md
test-output/my_new_project/src/my_new_project/: __init__.py  settings.py
test-output/my_new_project/tests/: test_settings.py
tests/: conftest.py  test_generated_project.py  test_project_structure.py
{{ cookiecutter.project_slug }}/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml
{{ cookiecutter.project_slug }}/.github/: PULL_REQUEST_TEMPLATE.md
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: bug_report.md
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/.vsconfig/: settings.json
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: settings.py
{{ cookiecutter.project_slug }}/tests/: test_settings.py
{{ project_slug }}/: Changelog.md  LICENSE  Makefile  README.md  mkdocs.yml
{{ project_slug }}/docs/: index.md
